// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Favor completed 1`] = `
.c0 {
  width: 100%;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  display: grid;
  grid-template-columns: repeat(3,1fr);
  grid-gap: 6px;
  padding: 12px;
}

.c0 h4 {
  -webkit-text-decoration: line-through;
  text-decoration: line-through;
  opacity: 0.5;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0 h4:first-child {
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c0 > div:not(:last-child) {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c0 > div:last-child {
  -webkit-text-decoration: line-through;
  text-decoration: line-through;
  opacity: 0.5;
  grid-column: 1/4;
  text-align: justify;
}

.c0 > label {
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c0 > label:first-child {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c0 > label > input {
  width: 100%;
}

.c0 textarea {
  width: 100%;
  height: 100%;
  border-radius: 5px;
  background-color: rgb(234,242,246);
  border: 1px solid rgb(0,130,155);
  color: rgb(0,130,155);
  text-align: justify;
  font-family: "MinionPro",Times New Roman,serif;
  font-size: 16px;
  padding: 6px;
  text-align: justify;
}

.c0 label[for='description'] {
  grid-column: 1/3;
}

<div
  class="c0"
  data-testid="favor-2"
>
  <h4
    data-testid="favor-2-size"
  >
    Small favor
  </h4>
  <h4
    data-testid="favor-2-faction_id"
  >
    NAPD
  </h4>
  <div
    data-testid="favor-2-description"
  >
    Aditi's Union membership means she can call on other members of the Union for occasional help (see Union Member talent).
  </div>
</div>
`;

exports[`Storyshots Components/Favor default 1`] = `
.c0 {
  width: 100%;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  display: grid;
  grid-template-columns: repeat(3,1fr);
  grid-gap: 6px;
  padding: 12px;
}

.c0 h4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0 h4:first-child {
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c0 > div:not(:last-child) {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c0 > div:last-child {
  grid-column: 1/4;
  text-align: justify;
}

.c0 > label {
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c0 > label:first-child {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c0 > label > input {
  width: 100%;
}

.c0 textarea {
  width: 100%;
  height: 100%;
  border-radius: 5px;
  background-color: rgb(234,242,246);
  border: 1px solid rgb(0,130,155);
  color: rgb(0,130,155);
  text-align: justify;
  font-family: "MinionPro",Times New Roman,serif;
  font-size: 16px;
  padding: 6px;
  text-align: justify;
}

.c0 label[for='description'] {
  grid-column: 1/3;
}

<div
  class="c0"
  data-testid="favor-1"
>
  <h4
    data-testid="favor-1-size"
  >
    Big favor
  </h4>
  <h4
    data-testid="favor-1-faction_id"
  >
    Orgcrime
  </h4>
  <div
    data-testid="favor-1-description"
  >
    Aditi owes a big favor to Tián Shun, a mid-level boss in the 14K outfit. Tián helped Aditi establish her life in the Base De Cayambe and set up a fake ID for her that registers her as human. In return, he occasionally asks her to review the “books” from his part of the organization, and once had her patch up one of his wounded enforcers. He has made it clear that he expects more such aid going forward.
  </div>
</div>
`;

exports[`Storyshots Components/Favor editing 1`] = `
.c0 {
  width: 100%;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  display: grid;
  grid-template-columns: repeat(3,1fr);
  grid-gap: 6px;
  padding: 12px;
}

.c0 h4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0 h4:first-child {
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c0 > div:not(:last-child) {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c0 > div:last-child {
  grid-column: 1/4;
  text-align: justify;
}

.c0 > label {
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c0 > label:first-child {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c0 > label > input {
  width: 100%;
}

.c0 textarea {
  width: 100%;
  height: 100%;
  border-radius: 5px;
  background-color: rgb(234,242,246);
  border: 1px solid rgb(0,130,155);
  color: rgb(0,130,155);
  text-align: justify;
  font-family: "MinionPro",Times New Roman,serif;
  font-size: 16px;
  padding: 6px;
  text-align: justify;
}

.c0 label[for='description'] {
  grid-column: 1/3;
}

.c1 {
  padding: 6px;
  border: 1px solid rgb(0,130,155);
  border-radius: 5px;
  background: rgba(234,242,246,0.5);
  cursor: pointer;
  color: rgb(0,130,155);
  text-transform: uppercase;
}

.c1 > h4 {
  -webkit-text-decoration: none;
  text-decoration: none;
  opacity: 1;
}

.c1:hover {
  background-color: rgb(0,130,155);
}

.c1:hover h4 {
  color: rgb(234,242,246);
}

.c1:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

<div
  class="c0"
  data-testid="favor-1"
>
  <h4
    data-testid="favor-1-size"
  >
    Big favor
  </h4>
  <h4
    data-testid="favor-1-faction_id"
  >
    Orgcrime
  </h4>
  <div>
    <button
      class="c1"
      data-testid="completeButton-1"
      type="button"
    >
      <h4>
        Complete
      </h4>
    </button>
  </div>
  <div
    data-testid="favor-1-description"
  >
    Aditi owes a big favor to Tián Shun, a mid-level boss in the 14K outfit. Tián helped Aditi establish her life in the Base De Cayambe and set up a fake ID for her that registers her as human. In return, he occasionally asks her to review the “books” from his part of the organization, and once had her patch up one of his wounded enforcers. He has made it clear that he expects more such aid going forward.
  </div>
</div>
`;

exports[`Storyshots Components/Favor editing completed 1`] = `
.c0 {
  width: 100%;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  display: grid;
  grid-template-columns: repeat(3,1fr);
  grid-gap: 6px;
  padding: 12px;
}

.c0 h4 {
  -webkit-text-decoration: line-through;
  text-decoration: line-through;
  opacity: 0.5;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0 h4:first-child {
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c0 > div:not(:last-child) {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c0 > div:last-child {
  -webkit-text-decoration: line-through;
  text-decoration: line-through;
  opacity: 0.5;
  grid-column: 1/4;
  text-align: justify;
}

.c0 > label {
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c0 > label:first-child {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c0 > label > input {
  width: 100%;
}

.c0 textarea {
  width: 100%;
  height: 100%;
  border-radius: 5px;
  background-color: rgb(234,242,246);
  border: 1px solid rgb(0,130,155);
  color: rgb(0,130,155);
  text-align: justify;
  font-family: "MinionPro",Times New Roman,serif;
  font-size: 16px;
  padding: 6px;
  text-align: justify;
}

.c0 label[for='description'] {
  grid-column: 1/3;
}

.c1 {
  padding: 6px;
  border: 1px solid rgb(0,130,155);
  border-radius: 5px;
  background: rgba(234,242,246,0.5);
  cursor: pointer;
  color: rgb(0,130,155);
  text-transform: uppercase;
}

.c1 > h4 {
  -webkit-text-decoration: none;
  text-decoration: none;
  opacity: 1;
}

.c1:hover {
  background-color: rgb(0,130,155);
}

.c1:hover h4 {
  color: rgb(234,242,246);
}

.c1:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

<div
  class="c0"
  data-testid="favor-2"
>
  <h4
    data-testid="favor-2-size"
  >
    Small favor
  </h4>
  <h4
    data-testid="favor-2-faction_id"
  >
    NAPD
  </h4>
  <div>
    <button
      class="c1"
      data-testid="revertButton-2"
      type="button"
    >
      <h4>
        Revert
      </h4>
    </button>
  </div>
  <div
    data-testid="favor-2-description"
  >
    Aditi's Union membership means she can call on other members of the Union for occasional help (see Union Member talent).
  </div>
</div>
`;

exports[`Storyshots Components/Favor new 1`] = `
.c1 {
  font-family: "Monkirta",Helvetica,sans-serif;
  text-transform: uppercase;
  width: 100%;
}

.c1 .size__value-container,
.c1 .size__indicators {
  background-color: transparent;
  color: rgb(0,130,155);
  cursor: pointer;
}

.c1 .size__single-value {
  color: rgb(0,130,155);
}

.c1 .size__indicator-separator {
  background-color: rgb(0,130,155);
}

.c1 .size__dropdown-indicator > svg {
  fill: rgb(0,130,155);
}

.c1 .size__control,
.c1 .size__menu {
  background-color: rgb(234,242,246);
  border: 1px solid rgb(0,130,155);
  padding: 0;
  color: rgb(0,130,155);
}

.c1 .size__control:hover,
.c1 .size__menu:hover {
  border-color: rgb(65,178,180);
}

.c1 .size__option {
  background-color: transparent;
  cursor: pointer;
}

.c1 .size__option:hover {
  background-color: rgb(0,130,155);
  color: rgb(234,242,246);
}

.c1 .size__option--is-selected {
  background-color: rgb(0,130,155);
  color: rgb(234,242,246);
}

.c1 .size__option--is-selected:hover {
  background-color: rgb(0,130,155);
}

.c1 .size__control--is-disabled {
  opacity: 0.7;
}

.c2 {
  font-family: "Monkirta",Helvetica,sans-serif;
  text-transform: uppercase;
  width: 100%;
}

.c2 .faction_id__value-container,
.c2 .faction_id__indicators {
  background-color: transparent;
  color: rgb(0,130,155);
  cursor: pointer;
}

.c2 .faction_id__single-value {
  color: rgb(0,130,155);
}

.c2 .faction_id__indicator-separator {
  background-color: rgb(0,130,155);
}

.c2 .faction_id__dropdown-indicator > svg {
  fill: rgb(0,130,155);
}

.c2 .faction_id__control,
.c2 .faction_id__menu {
  background-color: rgb(234,242,246);
  border: 1px solid rgb(0,130,155);
  padding: 0;
  color: rgb(0,130,155);
}

.c2 .faction_id__control:hover,
.c2 .faction_id__menu:hover {
  border-color: rgb(65,178,180);
}

.c2 .faction_id__option {
  background-color: transparent;
  cursor: pointer;
}

.c2 .faction_id__option:hover {
  background-color: rgb(0,130,155);
  color: rgb(234,242,246);
}

.c2 .faction_id__option--is-selected {
  background-color: rgb(0,130,155);
  color: rgb(234,242,246);
}

.c2 .faction_id__option--is-selected:hover {
  background-color: rgb(0,130,155);
}

.c2 .faction_id__control--is-disabled {
  opacity: 0.7;
}

.c0 {
  width: 100%;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  display: grid;
  grid-template-columns: repeat(2,1fr);
  grid-gap: 6px;
  padding: 12px;
}

.c0 h4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0 h4:first-child {
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c0 > div:not(:last-child) {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c0 > label {
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c0 > label:first-child {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c0 > label > input {
  width: 100%;
}

.c0 textarea {
  width: 100%;
  height: 100%;
  border-radius: 5px;
  background-color: rgb(234,242,246);
  border: 1px solid rgb(0,130,155);
  color: rgb(0,130,155);
  text-align: justify;
  font-family: "MinionPro",Times New Roman,serif;
  font-size: 16px;
  padding: 6px;
  text-align: justify;
}

.c0 label[for='description'] {
  grid-column: 1/3;
}

<div
  class="c0"
  data-testid="new-favor"
>
  <label
    for="size"
  >
    <div
      class="css-1pcexqc-container c1"
      id="size"
    >
      <div
        class="css-bg1rzq-control size__control"
      >
        <div
          class="css-1hwfws3 size__value-container size__value-container--has-value"
        >
          <div
            class="css-dvua67-singleValue size__single-value"
          >
            Small favor
          </div>
          <div
            class="css-1g6gooi"
          >
            <div
              class="size__input"
              style="display: inline-block;"
            >
              <input
                aria-autocomplete="list"
                autocapitalize="none"
                autocomplete="off"
                autocorrect="off"
                id="react-select-2-input"
                spellcheck="false"
                style="box-sizing: content-box; width: 2px; border: 0px; font-size: inherit; opacity: 1; outline: 0; padding: 0px;"
                tabindex="0"
                type="text"
                value=""
              />
              <div
                style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-size: inherit; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
              />
            </div>
          </div>
        </div>
        <div
          class="css-1wy0on6 size__indicators"
        >
          <span
            class="css-bgvzuu-indicatorSeparator size__indicator-separator"
          />
          <div
            aria-hidden="true"
            class="css-16pqwjk-indicatorContainer size__indicator size__dropdown-indicator"
          >
            <svg
              aria-hidden="true"
              class="css-19bqh2r"
              focusable="false"
              height="20"
              viewBox="0 0 20 20"
              width="20"
            >
              <path
                d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
              />
            </svg>
          </div>
        </div>
      </div>
      <input
        name="size"
        type="hidden"
        value="small"
      />
    </div>
  </label>
  <label
    for="faction_id"
  >
    <div
      class="css-1pcexqc-container c2"
      id="faction_id"
    >
      <div
        class="css-bg1rzq-control faction_id__control"
      >
        <div
          class="css-1hwfws3 faction_id__value-container faction_id__value-container--has-value"
        >
          <div
            class="css-dvua67-singleValue faction_id__single-value"
          >
            Jinteki
          </div>
          <div
            class="css-1g6gooi"
          >
            <div
              class="faction_id__input"
              style="display: inline-block;"
            >
              <input
                aria-autocomplete="list"
                autocapitalize="none"
                autocomplete="off"
                autocorrect="off"
                id="react-select-3-input"
                spellcheck="false"
                style="box-sizing: content-box; width: 2px; border: 0px; font-size: inherit; opacity: 1; outline: 0; padding: 0px;"
                tabindex="0"
                type="text"
                value=""
              />
              <div
                style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-size: inherit; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
              />
            </div>
          </div>
        </div>
        <div
          class="css-1wy0on6 faction_id__indicators"
        >
          <span
            class="css-bgvzuu-indicatorSeparator faction_id__indicator-separator"
          />
          <div
            aria-hidden="true"
            class="css-16pqwjk-indicatorContainer faction_id__indicator faction_id__dropdown-indicator"
          >
            <svg
              aria-hidden="true"
              class="css-19bqh2r"
              focusable="false"
              height="20"
              viewBox="0 0 20 20"
              width="20"
            >
              <path
                d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
              />
            </svg>
          </div>
        </div>
      </div>
      <input
        name="faction_id"
        type="hidden"
        value="jinteki"
      />
    </div>
  </label>
  <label
    for="description"
  >
    <textarea
      name="description"
      placeholder="Add description..."
      rows="4"
    />
  </label>
</div>
`;
